--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -33,9 +33,9 @@
 				<div class="b-survey-questionnaire__questiontext">Is the item a real photograph?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 						<ul class="b-switch">
-						<li data-v="false" class="red">no</li>
+						<li data-v="false" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="true"  class="green">yes</li>
+						<li data-v="true"  class="color_green">yes</li>
 					</ul>
 				</div>
 			</li>
@@ -44,9 +44,9 @@
 				<div class="b-survey-questionnaire__questiontext">Is the photograph taken outdoors?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
-						<li data-v="false" class="red">no</li>
+						<li data-v="false" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="true"  class="green">yes</li>
+						<li data-v="true"  class="color_green">yes</li>
 					</ul>
 				</div>
 			</li>
@@ -55,9 +55,9 @@
 				<div class="b-survey-questionnaire__questiontext">Is the photograph taken during an event?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
-						<li data-v="false" class="red">no</li>
+						<li data-v="false" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="true"  class="green">yes</li>
+						<li data-v="true"  class="color_green">yes</li>
 					</ul>
 				</div>
 			</li>
@@ -66,10 +66,10 @@
 				<div class="b-survey-questionnaire__questiontext">At what time of the day is the photograph taken?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
-						<li data-v="2"     class="darkblue">night</li>
-						<li data-v="1"     class="gray">twilight</li>
+						<li data-v="2"     class="color_darkblue">night</li>
+						<li data-v="1"     class="color_gray">twilight</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="0"     class="green">day</li>
+						<li data-v="0"     class="color_green">day</li>
 					</ul>
 				</div>
 			</li>
@@ -78,9 +78,9 @@
 				<div class="b-survey-questionnaire__questiontext">Is the main subject of the photograph:<br/> — a person?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
-						<li data-v="false" class="green">no</li>
+						<li data-v="false" class="color_green">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="true"  class="red">yes</li>
+						<li data-v="true"  class="color_red">yes</li>
 					</ul>
 				</div>
 			</li>
@@ -89,9 +89,9 @@
 				<div class="b-survey-questionnaire__questiontext"> — any other moving object?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
-						<li data-v="false" class="green">no</li>
+						<li data-v="false" class="color_green">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="true"  class="red">yes</li>
+						<li data-v="true"  class="color_red">yes</li>
 					</ul>
 				</div>
 			</li>
@@ -100,9 +100,9 @@
 				<div class="b-survey-questionnaire__questiontext">Is the photograph geotagged correctly?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
-						<li data-v="false" class="yellow">no</li>
+						<li data-v="false" class="color_yellow">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="true"  class="green">yes</li>
+						<li data-v="true"  class="color_green">yes</li>
 					</ul>
 				</div>
 				<div class="b-survey-map"></div>
@@ -112,9 +112,9 @@
 				<div class="b-survey-questionnaire__questiontext">Does the photograph describe surrounding space?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
-						<li data-v="false" class="red">no</li>
+						<li data-v="false" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="true"  class="green">yes</li>
+						<li data-v="true"  class="color_green">yes</li>
 					</ul>
 				</div>
 			</li>
@@ -123,9 +123,9 @@
 				<div class="b-survey-questionnaire__questiontext">Is the place on the photograph scenic?</div>
 				<div data-q="" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch">
-						<li data-v="false" class="red">no</li>
+						<li data-v="false" class="color_red">no</li>
 						<li data-v="null"  class="default"></li>
-						<li data-v="true"  class="green">yes</li>
+						<li data-v="true"  class="color_green">yes</li>
 					</ul>
 				</div>
 			</li>
