--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-button/b-button.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-button/b-button.scss
@@ -22,6 +22,13 @@
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
 	box-shadow: 0 1px 2px rgba(0,0,0,.2);
 }
+
+.b-button:focus {
+	border: 3px solid rgba(0,0,0,0.5);
+	margin-right: -0px !important;
+	margin-top: -2px !important;
+}
+
 .b-button:hover {
 	text-decoration: none;
 }
