--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/p-survey.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/p-survey.scss
@@ -1,28 +1,28 @@
-.l-survey {
+.p-survey {
 	margin: 0px auto 18px;
 	width: 960px;
-	padding: 0 20px;
+	padding: 0 20px 18px;
 	
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 	font-size: 14px;
 	line-height: 18px;
 }
 
-.l-survey__leftcol {
+.p-survey__leftcol {
 	width: 500px;
 	float:left;
 }
 
-.l-survey__rightcol {
+.p-survey__rightcol {
 	padding-left: 520px;
 	border-top: 1px solid #fff;
 }
 
-.l-survey-header{
+.p-survey-header{
 	height: 54px;
 }
 
-.l-survey-header h1{
+.p-survey-header h1{
 	font-size: 25px;
 	font-weight: normal;
 	margin: 0px;
@@ -30,11 +30,11 @@
 	padding-top: 10px;
 }
 
-.l-survey-header h1 a{
+.p-survey-header h1 a{
 	color: #000;
 	text-decoration: none;
 }
 
-.l-survey-header h1 a:hover{
+.p-survey-header h1 a:hover{
 	text-decoration: underline;
 }
