--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
@@ -42,6 +42,12 @@
 	opacity: 0.8;
 }
 
+.b-switch.ui-state-disabled>.b-switch__options>li,
+.b-switch.ui-state-disabled>.b-switch__options>li:hover {
+	cursor: default;
+	opacity: 0.4;
+}
+
 .b-switch__options li:first-child {
 	float: right;
 	overflow: visible;
@@ -70,7 +76,9 @@
 .b-switch__ui {
 	float: right;
 }
-
+.b-switch__ui.ui-state-disabled{
+	opacity: 1;
+}
 .b-switch__ui.ui-slider {
 	background: url("/static/i/b-switch__ui.png") no-repeat -10px 0;
 	display: block;
