b-survey-map → jQuery UI widget

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-questionnaire/b-survey-questionnaire.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-questionnaire/b-survey-questionnaire.scss
@@ -11,7 +11,7 @@
 	overflow: visible;
 	position: relative;
 	padding-left: 16px;
-	opacity: 0.4;
+/*	opacity: 0.4;*/
 }
 .b-survey-questionnaire__question_enabled {
 	opacity: 1 !important;
