--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -15,14 +15,15 @@
 <body class="p-survey">
 	<div class="p-survey-header">
 		<div class="b-userbox"></div>
-		<h1><a href="{{ path("pat_default_index") }}">Photo Content Assessment Tool</a>: Flickr (<span class="i-info-countdone">1</span>/<span class="i-info-counttotal">42</span>)</h1>
+		<h1><a href="{{ path("pat_default_index") }}">Photo Content Assessment Tool</a>: Panoramio (<span class="i-info-countdone">1</span>/<span class="i-info-counttotal">42</span>)</h1>
 	</div>
 	<div class="p-survey__leftcol">
-		<a href="{photo.mediumURL}" title="View this photo on Flickr" class="b-survey-photo">
-			<img class="b-survey-photo__photo" src="http://farm9.staticflickr.com/8013/7669755650_e0e9d4cb04_z.jpg" />
-			<span class="b-survey-photo__title">Olympic stadium and The Orbit during London Olympics opening ceremony (2012-07-27)</span>
+		<a href="{photo.mediumURL}" title="View this photo on Panoramio" class="b-survey-photo">
+			<!--img class="b-survey-photo__photo" src="http://farm9.staticflickr.com/8013/7669755650_e0e9d4cb04_z.jpg" /-->
+			<img class="b-survey-photo__photo" src="http://static.panoramio.com/photos/1920x1280/75783395.jpg" />
+			<span class="b-survey-photo__title">Sunset at St. Paul’s Cathedral</span>
 			<!-- span class="b-survey-photo__description">Some description</span -->
-			<span class="b-survey-photo__timestamp" />2012-07-28 02:03:15</span>
+			<span class="b-survey-photo__timestamp" />2012-05-01 19:13:30</span>
 			<span class="b-survey-photo__user">Alexander Kachkaev</span>
 		</a>
 		<div class="b-survey-dashboard"></div>
