--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-switch/b-switch.scss
@@ -105,6 +105,10 @@
 	background-position: -30px -20px;
 }
 
+.b-switch__ui .ui-slider-handle.blinking:focus {
+	background-position: 0px -20px;
+}
+
 /****************
  *	custom slider sides
  */
