Improvements to UI of questionnaire (mainly, keyboard shortcuts and mouse actions)

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-questionnaire/b-survey-questionnaire.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-questionnaire/b-survey-questionnaire.scss
@@ -24,6 +24,9 @@
 	line-height: 16px;
 	float: left;
 }
+.b-survey-questionnaire__questiontext_disabled {
+	opacity: 0.4;
+}
 
 .b-survey-questionnaire__questionanswer {
 	float: right;
