--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
@@ -1,4 +1,7 @@
 .b-survey-photo {
+	height: 600px;
+}
+.b-survey-photo__info {
 	display: block;
 	margin: -15px -15px 30px;
 	padding: 15px;
@@ -10,15 +13,15 @@
 	
 }
 
-.b-survey-photo span {
+.b-survey-photo__info span {
 	opacity: 0.6;
 }
 
-.b-survey-photo:hover {
+.b-survey-photo__info:hover {
 	background: #eee;
 }
 
-.b-survey-photo:hover span {
+.b-survey-photo__info:hover span {
 	opacity: 1;
 }
 
@@ -42,4 +45,16 @@
 .b-survey-photo__user {
 	color: #888;
 	font-size: 10px;
+}
+
+.b-survey-photo__loading {
+	text-align: center;
+	padding-top: 150px;
+}
+.b-survey-photo__error {
+	color: #f00;
+	margin: auto;
+	padding-top: 150px;
+	text-align: center;
+	width: 60%;
 }
