Various updates. Mainly - entities and user auth

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/p-survey.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/p-survey.scss
@@ -2,6 +2,7 @@
 	margin: 0px auto 18px;
 	width: 960px;
 	padding: 0 20px 18px;
+	position: relative;
 	
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 	font-size: 14px;
