--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -19,13 +19,33 @@
 	</div>
 	<div class="p-survey__leftcol">
 		<div class="b-survey-photo"></div>
-		<!-- a href="{photo.mediumURL}" target="_blank" title="View this photo on Panoramio" class="b-survey-photo">
-			<img class="b-survey-photo__photo" alt="" src="http://static.panoramio.com/photos/1920x1280/75783395.jpg" />
-			<span class="b-survey-photo__title">Sunset at St. Paul’s Cathedral</span>
-			<span class="b-survey-photo__timestamp">2012-05-01 19:13:30</span>
-			<span class="b-survey-photo__user">Alexander Kachkaev</span>
-		</a-->
-		<div class="b-survey-dashboard"></div>
+		
+		<div class="b-survey-dashboard">
+			<ul class="b-survey-dashboard__items">
+				<li class="b-survey-dashboard__item complete"></li>
+				<li class="b-survey-dashboard__item complete"></li>
+				<li class="b-survey-dashboard__item complete"></li>
+				<li class="b-survey-dashboard__item complete"></li>
+				<li class="b-survey-dashboard__item incomplete"></li>
+				<li class="b-survey-dashboard__item incomplete"></li>
+				<li class="b-survey-dashboard__item complete"></li>
+				<li class="b-survey-dashboard__item complete"></li>
+				<li class="b-survey-dashboard__item complete"></li>
+				<li class="b-survey-dashboard__item complete"></li>
+				<li class="b-survey-dashboard__item incomplete"></li>
+				<li class="b-survey-dashboard__item current"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+				<li class="b-survey-dashboard__item"></li>
+			</ul>
+		</div>
 	</div>
 	<div class="p-survey__rightcol">
 		<ul class="b-survey-questionnaire">
